; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_aviobuf.c_ffio_open_whitelist.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_aviobuf.c_ffio_open_whitelist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ffio_open_whitelist(i32** %0, i8* %1, i32 %2, i32* %3, i32** %4, i8* %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32** %0, i32*** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32** %4, i32*** %13, align 8
  store i8* %5, i8** %14, align 8
  store i8* %6, i8** %15, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = load i32, i32* %11, align 4
  %20 = load i32*, i32** %12, align 8
  %21 = load i32**, i32*** %13, align 8
  %22 = load i8*, i8** %14, align 8
  %23 = load i8*, i8** %15, align 8
  %24 = call i32 @ffurl_open_whitelist(i32** %16, i8* %18, i32 %19, i32* %20, i32** %21, i8* %22, i8* %23, i32* null)
  store i32 %24, i32* %17, align 4
  %25 = load i32, i32* %17, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %7
  %28 = load i32, i32* %17, align 4
  store i32 %28, i32* %8, align 4
  br label %40

29:                                               ; preds = %7
  %30 = load i32**, i32*** %9, align 8
  %31 = load i32*, i32** %16, align 8
  %32 = call i32 @ffio_fdopen(i32** %30, i32* %31)
  store i32 %32, i32* %17, align 4
  %33 = load i32, i32* %17, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %29
  %36 = load i32*, i32** %16, align 8
  %37 = call i32 @ffurl_close(i32* %36)
  %38 = load i32, i32* %17, align 4
  store i32 %38, i32* %8, align 4
  br label %40

39:                                               ; preds = %29
  store i32 0, i32* %8, align 4
  br label %40

40:                                               ; preds = %39, %35, %27
  %41 = load i32, i32* %8, align 4
  ret i32 %41
}

declare dso_local i32 @ffurl_open_whitelist(i32**, i8*, i32, i32*, i32**, i8*, i8*, i32*) #1

declare dso_local i32 @ffio_fdopen(i32**, i32*) #1

declare dso_local i32 @ffurl_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
